# split-text

./: README.md  pyproject.toml
examples/: demo.py  demo_best.py  demo_improved.py  demo_semchunk.py
src/split_text/: __init__.py  cli.py  splitter.py
tests/: conftest.py  test_splitter.py
